# app_logger

./: Cargo.toml
database/migrations/: 0001_init.sql
src/: app_data.rs  database.rs  main.rs  utils.rs
src/controllers/: mod.rs  organizations.rs  users.rs
src/models/: applications.rs  mod.rs  organizations.rs  users.rs
