[package]
name = "app_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[dependencies]
actix-web = "4.8.0"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
env_logger = "0.10.0"
sqlx = { version = "0.7.4", features = [
  "runtime-async-std",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }
uuid = {version = "1.8.0", features = ["v4", "serde"]}
sha2 = "0.10.8"
